# code

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  GitHub-Badges.md  README.md  SECURITY.md  bitcoin.py  bitcoin_trading_simulation.py  main.tf  package-lock.json  package.json  requirements.txt  test.py  test_bitcoin.py  test_bitcoin_trading.py  test_cli.py  test_cli_args.py  test_isatty.py  test_progress.py  test_quiet.py  test_quiet_buy_sell.py  test_security.py  test_simulation.py  track.md
.Jules/: palette.md  sentinel.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: codeql.yml  docker-image.yml  publish-package.yml  python-package.yml  rust.yml  stale.yml  terraform.yml
NumberGuess/: NumberGuess.cpp
WorldWar/: Makefile  WorldWar.cpp
src/: main.rs
src/views/: mario-game.njk
